# env-http-auth

./: .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  SPEC.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  main.yaml
src/env_http_auth/: __init__.py  __main__.py  config.py  env.py  http_auth.py  keyring_.py  netrc_.py  resolver.py
src/http_auth/: __init__.py  __main__.py  config.py  http_auth.py  keyring_.py  resolver.py
tests/: cli_test.py  config_test.py  env_http_auth_test.py  env_test.py  http_auth_test.py  keyring_test.py  netrc_test.py  resolver_test.py
