#:schema https://www.schemastore.org/pyproject.json
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "http-auth"
dynamic = ["version"]
description = "Lightweight HTTP authentication via environment variables"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Flavio Amurrio", email = "25621374+FlavioAmurrioCS@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
]

[project.optional-dependencies]

[dependency-groups]
dev = [
  { include-group = "test" },
  { include-group = "types" },
]
test = [
  "httpx",
  "requests",
  "pytest",
  "keyring",
  "tomli ; python_version < '3.11'",
]
types_packages = [
  { include-group = "test" },
  "typing-extensions",
  "types-requests",
  "keyring",
]
types = [
  { include-group = "types_packages" },
  "mypy",
]
types_other = [
  { include-group = "types_packages" },
  "pyrefly",
  "pyright[nodejs]",
  "ty",
]
docs = [
  "zensical",
  "mkdocs-material",
  "mkdocs-marimo",
  "pymdown-extensions",
  # "click==8.2.1",
]

[project.urls]
Documentation = "https://github.com/FlavioAmurrioCS/http-auth#readme"
Issues = "https://github.com/FlavioAmurrioCS/http-auth/issues"
Source = "https://github.com/FlavioAmurrioCS/http-auth"

[project.scripts]
http-auth = "http_auth.__main__:main"

###############################################################################
# region: hatch
###############################################################################
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/http_auth/_version.py"

[tool.hatch.envs.hatch-test]
dependency-groups = [
  "test",
]

[tool.hatch.envs.types]
dependency-groups = [
  "types",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/http_auth tests}"

[[tool.hatch.envs.hatch-test.matrix]]
python = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
]
###############################################################################
# endregion: hatch
###############################################################################

###############################################################################
# region: uv
###############################################################################
[tool.uv.pip]
index-url = "https://pypi.org/simple"
###############################################################################
# endregion: uv
###############################################################################

###############################################################################
# region: coverage
###############################################################################
[tool.coverage.run]
source_pkgs = ["http_auth", "tests"]
branch = true
parallel = true
omit = [
]

[tool.coverage.paths]
http_auth = ["src/http_auth"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
###############################################################################
# endregion: coverage
###############################################################################

###############################################################################
# region: pyright
###############################################################################
[tool.pyright]
pythonVersion = "3.9"
###############################################################################
# endregion: pyright
###############################################################################

###############################################################################
# region: mypy
###############################################################################
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
###############################################################################
# endregion: mypy
###############################################################################

###############################################################################
# region: ruff
###############################################################################
[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812",  # missing-trailing-comma
  "D",       # pydocstyle
  "ERA001",  # commented-out-code
  "EXE003",  # shebang-missing-python
  "ISC001",  # single-line-implicit-string-concatenation
  "PTH",     # flake8-use-pathlib
  "T20",     # flake8-print
  "PLC0415", # import-outside-top-level
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
  "S105",
  "ARG002",
  "F841",
  "PLR2004",
  "S607",
]
"src/**/*.py" = [
  "ANN401",
]
###############################################################################
# endregion: ruff
###############################################################################
